# Sistema-de-Gestao-de-Alunos

./: CMakeLists.txt  GerenciadorDisciplina.cpp  GerenciadorDisciplina.h  README.md  aluno.cpp  aluno.h  disciplinaAluno.cpp  disciplinaAluno.h  disciplinaDinamica.cpp  disciplinaDinamica.h  disciplinaEstatica.cpp  disciplinaEstatica.h  disciplinaInfo.cpp  disciplinaInfo.h  disciplinas.cpp  disciplinas.h  main.cpp  nota.cpp
